Fixing the size of the whole screen on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0px;
   font-family: "Epilogue", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
